# tweet-scraper

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tweets.md
config/: config.example.yaml  config.yaml
src/: main.py
src/api/: twitter_client.py
src/core/: config.py  constants.py  exceptions.py
src/filters/: __init__.py  keyword_filter.py
src/models/: __init__.py  config.py  tweet.py
src/output/: __init__.py  markdown_writer.py
src/utils/: __init__.py  date_utils.py  logging.py
tests/: conftest.py
tests/integration/: test_twitter_client.py
tests/unit/: test_config.py  test_filters.py  test_models.py  test_utils.py
